examples/test/testpolicy938.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy938
  namespace: namespace76
spec:
  podSelector:
    matchLabels:
      key34: value38
      key13: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value7
          key34: value3
      podSelector:
        matchLabels:
          key1: value45
